# CuteCW

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Morse.cpp  Morse.h  Prefs.cpp  Prefs.h  main.cpp  ui_MainWindow.h
modes/: ChooseSequenceDialog.h  FrontPage.cpp  KeyTraining.cpp  KeyTraining.h  LetterTrainingMode.cpp  LetterTrainingMode.h  MorseMode.cpp  MorseMode.h  QModeStart.cpp  QModeStart.h  ReadMode.cpp  ReadMode.h  SpeedTrainingMode.cpp  SpeedTrainingMode.h  TrainingMode.cpp  TrainingMode.h  WordTrainingMode.cpp
modes/games/: GroupGame.cpp  GroupGame.h  HighScoresDialog.cpp  HighScoresDialog.h  KeyInvaders.cpp  KeyInvaders.h  MGameMode.h  WordGame.cpp
